--- a/Milestone -1/style.css
+++ b/Milestone -1/style.css
@@ -40,7 +40,9 @@ h3 {
     margin-bottom: 130px;
 }
 p {
-    font-size: 15px;
+    font-size: 11px;
+    text-transform: uppercase;
+    margin-top: 4px;
 }
 .row {
     display: flex;
